--- a/package.json
+++ b/package.json
@@ -2,18 +2,22 @@
   "name": "mdc-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "webpack"
-  },
-  "author": "",
-  "license": "ISC",
+  "main": "a.js",
   "dependencies": {
-    "@material/icon-toggle": "^0.1.13",
-    "material-components-web": "^0.14.0"
-  },
-  "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-loader": "^7.1.1"
-  }
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "material-components-web": "^0.14.0",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^0.4.6"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
