--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "webpack": "^3.1.0"
   },
   "dependencies": {
+    "@material/card": "^0.2.4",
     "@material/icon-toggle": "^0.1.13",
     "material-components-web": "^0.14.0"
   }
