--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material/form-field": "^0.2.9",
     "@material/icon-toggle": "^0.1.13",
     "@material/linear-progress": "^0.1.4",
+    "@material/list": "^0.2.12",
     "@material/select": "^0.3.10",
     "material-components-web": "^0.14.0"
   }
